BMI information and Login

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,5 @@
 theme: jekyll-theme-midnight
-title: "Leuck Family Reunion"
-description: "Frank P Leuck and Judith Sherwood Leuck reunion site and blog."
+title: "Dolphin Fitness"
+description: "An all in one website to better the health of everyone"
 gitorg: "https://github.com/jm1021/leuck_reunion"
-description: "June 26 to July 1 2023"
 google_analytics:
