WE GOT DA THEME BOI NO ONE PUSH

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-theme: jekyll-theme-midnight
+theme: jekyll-theme-cayman
 title: "Dolphin Fitness"
 description: "An all in one website to better the health of everyone"
 gitorg: "https://github.com/jm1021/leuck_reunion"
 google_analytics:
-theme: jekyll-theme-minimal
+theme: jekyll-theme-cayman
